[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/world.gd" type="Script" id=1]
[ext_resource path="res://images/background/back2.png" type="Texture" id=2]
[ext_resource path="res://images/gui/tutorial.png" type="Texture" id=3]
[ext_resource path="res://tilesets/tiles_basic.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/player_birb.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemies/enemy_thing_red1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/enemy_thing_red2.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemies/enemy_thing_queen.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/gui/you_won.png" type="Texture" id=9]
[ext_resource path="res://images/gui/you_lost.png" type="Texture" id=10]

[node name="world1" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( -1760, -1056 )
scale = Vector2( 1, 1.08333 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Region" ]

[node name="tutorial" type="Sprite" parent="." index="1"]

position = Vector2( -1072, -928 )
scale = Vector2( 0.899628, 0.901926 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Region" ]

[node name="tilemap" type="TileMap" parent="." index="2" groups=[
"walls",
]]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = true
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 3
collision_mask = 3
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -5767333, 0, 0, -5767332, 0, 0, -5767331, 0, 0, -5767330, 0, 0, -5767329, 0, 0, -5767328, 0, 0, -5767327, 0, 0, -5767326, 0, 0, -5767325, 0, 0, -5767324, 0, 0, -5767323, 0, 0, -5767322, 0, 0, -5767321, 0, 0, -5767320, 0, 0, -5767319, 0, 0, -5767318, 0, 0, -5767317, 0, 0, -5767316, 0, 0, -5767315, 0, 0, -5767314, 0, 0, -5767313, 0, 0, -5767312, 0, 0, -5767311, 0, 0, -5767310, 0, 0, -5767309, 0, 0, -5767308, 0, 0, -5767307, 0, 0, -5767306, 0, 0, -5767305, 0, 0, -5767304, 0, 0, -5767303, 0, 0, -5767302, 0, 0, -5767301, 0, 0, -5767300, 0, 0, -5767299, 0, 0, -5767298, 0, 0, -5767297, 0, 0, -5767296, 0, 0, -5767295, 0, 0, -5767294, 0, 0, -5767293, 0, 0, -5767292, 0, 0, -5767291, 0, 0, -5767290, 0, 0, -5767289, 0, 0, -5767288, 0, 0, -5767287, 0, 0, -5767286, 0, 0, -5767285, 0, 0, -5767284, 0, 0, -5767283, 0, 0, -5767282, 0, 0, -5767281, 0, 0, -5767280, 0, 0, -5767279, 0, 0, -5767278, 0, 0, -5767277, 0, 0, -5767276, 0, 0, -5767275, 0, 0, -5767274, 0, 0, -5767273, 0, 0, -5767272, 0, 0, -5767271, 0, 0, -5767270, 0, 0, -5767269, 0, 0, -5767268, 0, 0, -5767267, 0, 0, -5767266, 0, 0, -5767265, 0, 0, -5767264, 0, 0, -5767263, 0, 0, -5767262, 0, 0, -5767261, 0, 0, -5767260, 0, 0, -5767259, 0, 0, -5767258, 0, 0, -5767257, 0, 0, -5767256, 0, 0, -5767255, 0, 0, -5767254, 0, 0, -5767253, 0, 0, -5767252, 0, 0, -5767251, 0, 0, -5767250, 0, 0, -5767249, 0, 0, -5767248, 0, 0, -5767247, 0, 0, -5767246, 0, 0, -5767245, 0, 0, -5767244, 0, 0, -5767243, 0, 0, -5767242, 0, 0, -5767241, 0, 0, -5767240, 0, 0, -5767239, 0, 0, -5767238, 0, 0, -5767237, 0, 0, -5767236, 0, 0, -5767235, 0, 0, -5767234, 0, 0, -5767233, 0, 0, -5767232, 0, 0, -5767231, 0, 0, -5767230, 0, 0, -5767229, 0, 0, -5767228, 0, 0, -5767227, 0, 0, -5767226, 0, 0, -5767225, 0, 0, -5767224, 0, 0, -5767223, 0, 0, -5767222, 0, 0, -5767221, 0, 0, -5767220, 0, 0, -5767219, 0, 0, -5767218, 0, 0, -5767217, 0, 0, -5767216, 0, 0, -5767215, 0, 0, -5767214, 0, 0, -5767213, 0, 0, -5767212, 0, 0, -5767211, 0, 0, -5767210, 0, 0, -5767209, 0, 0, -5767208, 0, 0, -5767207, 0, 0, -5767206, 0, 0, -5767205, 0, 0, -5767204, 0, 0, -5767203, 0, 0, -5767202, 0, 0, -5767201, 0, 0, -5767200, 0, 0, -5767199, 0, 0, -5767198, 0, 0, -5767197, 0, 0, -5767196, 0, 0, -5767195, 0, 0, -5767194, 0, 0, -5767193, 0, 0, -5767192, 0, 0, -5767191, 0, 0, -5767190, 0, 0, -5767189, 0, 0, -5767188, 0, 0, -5767187, 0, 0, -5767186, 0, 0, -5767185, 0, 0, -5767184, 0, 0, -5767183, 0, 0, -5767182, 0, 0, -5767181, 0, 0, -5767180, 0, 0, -5767179, 0, 0, -5767178, 0, 0, -5767177, 0, 0, -5767176, 0, 0, -5767175, 0, 0, -5767174, 0, 0, -5767173, 0, 0, -5767172, 0, 0, -5767171, 0, 0, -5767170, 0, 0, -5767169, 0, 0, -5832704, 0, 0, -5832703, 0, 0, -5832702, 0, 0, -5832701, 0, 0, -5832700, 0, 0, -5832699, 0, 0, -5832698, 0, 0, -5832697, 0, 0, -5832696, 0, 0, -5832695, 0, 0, -5832694, 0, 0, -5832693, 0, 0, -5832692, 0, 0, -5832691, 0, 0, -5832690, 0, 0, -5832689, 0, 0, -5832688, 0, 0, -5832687, 0, 0, -5832686, 0, 0, -5832685, 0, 0, -5832684, 0, 0, -5832683, 0, 0, -5832682, 0, 0, -5832681, 0, 0, -5832680, 0, 0, -5832679, 0, 0, -5832678, 0, 0, -5832677, 0, 0, -5832676, 0, 0, -5832675, 0, 0, -5832674, 0, 0, -5832673, 0, 0, -5832672, 0, 0, -5832671, 0, 0, -5832670, 0, 0, -5832669, 0, 0, -5832668, 0, 0, -5832667, 0, 0, -5832666, 0, 0, -5832665, 0, 0, -5832664, 0, 0, -5832663, 0, 0, -5832662, 0, 0, -5832661, 0, 0, -5832660, 0, 0, -5832659, 0, 0, -5832658, 0, 0, -5832657, 0, 0, -5832656, 0, 0, -5832655, 0, 0, -5832654, 0, 0, -5832653, 0, 0, -5832652, 0, 0, -5832651, 0, 0, -5832650, 0, 0, -5701797, 0, 0, -5701796, 0, 0, -5701795, 0, 0, -5701794, 0, 0, -5701793, 0, 0, -5701792, 0, 0, -5701791, 0, 0, -5701790, 0, 0, -5701789, 0, 0, -5701788, 0, 0, -5701787, 0, 0, -5701786, 0, 0, -5701785, 0, 0, -5701784, 0, 0, -5701783, 0, 0, -5701782, 0, 0, -5701781, 0, 0, -5701780, 0, 0, -5701779, 0, 0, -5701778, 0, 0, -5701777, 0, 0, -5701776, 0, 0, -5701775, 0, 0, -5701774, 0, 0, -5701773, 0, 0, -5701772, 0, 0, -5701771, 0, 0, -5701770, 0, 0, -5701769, 0, 0, -5701768, 0, 0, -5701767, 0, 0, -5701766, 0, 0, -5701765, 0, 0, -5701764, 0, 0, -5701763, 0, 0, -5701762, 0, 0, -5701761, 0, 0, -5701760, 0, 0, -5701759, 0, 0, -5701758, 0, 0, -5701757, 0, 0, -5701756, 0, 0, -5701755, 0, 0, -5701754, 0, 0, -5701753, 0, 0, -5701752, 0, 0, -5701751, 0, 0, -5701750, 0, 0, -5701749, 0, 0, -5701748, 0, 0, -5701747, 0, 0, -5701746, 0, 0, -5701745, 0, 0, -5701744, 0, 0, -5701743, 0, 0, -5701742, 0, 0, -5701741, 0, 0, -5701740, 0, 0, -5701739, 0, 0, -5701738, 0, 0, -5701737, 0, 0, -5701736, 0, 0, -5701735, 0, 0, -5701734, 0, 0, -5701733, 0, 0, -5701732, 0, 0, -5701731, 0, 0, -5701730, 0, 0, -5701729, 0, 0, -5701728, 0, 0, -5701727, 0, 0, -5701726, 0, 0, -5701725, 0, 0, -5701724, 0, 0, -5701723, 0, 0, -5701722, 0, 0, -5701721, 0, 0, -5701720, 0, 0, -5701719, 0, 0, -5701718, 0, 0, -5701717, 0, 0, -5701716, 0, 0, -5701715, 0, 0, -5701714, 0, 0, -5701713, 0, 0, -5701712, 0, 0, -5701711, 0, 0, -5701710, 0, 0, -5701709, 0, 0, -5701708, 0, 0, -5701707, 0, 0, -5701706, 0, 0, -5701705, 0, 0, -5701704, 0, 0, -5701703, 0, 0, -5701702, 0, 0, -5701701, 0, 0, -5701700, 0, 0, -5701699, 0, 0, -5701698, 0, 0, -5701697, 0, 0, -5701696, 0, 0, -5701695, 0, 0, -5701694, 0, 0, -5701693, 0, 0, -5701692, 0, 0, -5701691, 0, 0, -5701690, 0, 0, -5701689, 0, 0, -5701688, 0, 0, -5701687, 0, 0, -5701686, 0, 0, -5701685, 0, 0, -5701684, 0, 0, -5701683, 0, 0, -5701682, 0, 0, -5701681, 0, 0, -5701680, 0, 0, -5701679, 0, 0, -5701678, 0, 0, -5701677, 0, 0, -5701676, 0, 0, -5701675, 0, 0, -5701674, 0, 0, -5701673, 0, 0, -5701672, 0, 0, -5701671, 0, 0, -5701670, 0, 0, -5701669, 0, 0, -5701668, 0, 0, -5701667, 0, 0, -5701666, 0, 0, -5701665, 0, 0, -5701664, 0, 0, -5701663, 0, 0, -5701662, 0, 0, -5701661, 0, 0, -5701660, 0, 0, -5701659, 0, 0, -5701658, 0, 0, -5701657, 0, 0, -5701656, 0, 0, -5701655, 0, 0, -5701654, 0, 0, -5701653, 0, 0, -5701652, 0, 0, -5701651, 0, 0, -5701650, 0, 0, -5701649, 0, 0, -5701648, 0, 0, -5701647, 0, 0, -5701646, 0, 0, -5701645, 0, 0, -5701644, 0, 0, -5701643, 0, 0, -5701642, 0, 0, -5701641, 0, 0, -5701640, 0, 0, -5701639, 0, 0, -5701638, 0, 0, -5701637, 0, 0, -5701636, 0, 0, -5701635, 0, 0, -5701634, 0, 0, -5701633, 0, 0, -5767168, 0, 0, -5767167, 0, 0, -5767166, 0, 0, -5767165, 0, 0, -5767164, 0, 0, -5767163, 0, 0, -5767162, 0, 0, -5767161, 0, 0, -5767160, 0, 0, -5767159, 0, 0, -5767158, 0, 0, -5767157, 0, 0, -5767156, 0, 0, -5767155, 0, 0, -5767154, 0, 0, -5767153, 0, 0, -5767152, 0, 0, -5767151, 0, 0, -5767150, 0, 0, -5767149, 0, 0, -5767148, 0, 0, -5767147, 0, 0, -5767146, 0, 0, -5767145, 0, 0, -5767144, 0, 0, -5767143, 0, 0, -5767142, 0, 0, -5767141, 0, 0, -5767140, 0, 0, -5767139, 0, 0, -5767138, 0, 0, -5767137, 0, 0, -5767136, 0, 0, -5767135, 0, 0, -5767134, 0, 0, -5767133, 0, 0, -5767132, 0, 0, -5767131, 0, 0, -5767130, 0, 0, -5767129, 0, 0, -5767128, 0, 0, -5767127, 0, 0, -5767126, 0, 0, -5767125, 0, 0, -5767124, 0, 0, -5767123, 0, 0, -5767122, 0, 0, -5767121, 0, 0, -5767120, 0, 0, -5767119, 0, 0, -5767118, 0, 0, -5767117, 0, 0, -5767116, 0, 0, -5767115, 0, 0, -5767114, 0, 0, -5636261, 0, 0, -5636260, 0, 0, -5701579, 0, 0, -5701578, 0, 0, -5570725, 0, 0, -5570724, 0, 0, -5636043, 0, 0, -5636042, 0, 0, -5505189, 0, 0, -5505188, 0, 0, -5570507, 0, 0, -5570506, 0, 0, -5439653, 0, 0, -5439652, 0, 0, -5504971, 0, 0, -5504970, 0, 0, -5374117, 0, 0, -5374116, 0, 0, -5439435, 0, 0, -5439434, 0, 0, -5308581, 0, 0, -5308580, 0, 0, -5373899, 0, 0, -5373898, 0, 0, -5243045, 0, 0, -5243044, 0, 0, -5308363, 0, 0, -5308362, 0, 0, -5177509, 0, 0, -5177508, 0, 0, -5242827, 0, 0, -5242826, 0, 0, -5111973, 0, 0, -5111972, 0, 0, -5177291, 0, 0, -5177290, 0, 0, -5046437, 0, 0, -5046436, 0, 0, -5111755, 0, 0, -5111754, 0, 0, -4980901, 0, 0, -4980900, 0, 0, -5046219, 0, 0, -5046218, 0, 0, -4915365, 0, 0, -4915364, 0, 0, -4980683, 0, 0, -4980682, 0, 0, -4849829, 0, 0, -4849828, 0, 0, -4915172, 0, 0, -4915171, 0, 0, -4915170, 0, 0, -4915169, 0, 0, -4915168, 0, 0, -4915167, 0, 0, -4915166, 0, 0, -4915165, 0, 0, -4915164, 0, 0, -4915163, 0, 0, -4915162, 0, 0, -4915147, 0, 0, -4915146, 0, 0, -4784293, 0, 0, -4784292, 0, 0, -4849637, 0, 0, -4849625, 0, 0, -4849611, 0, 0, -4849610, 0, 0, -4718757, 0, 0, -4718756, 0, 0, -4718663, 0, 0, -4718660, 0, 0, -4784102, 0, 0, -4784088, 0, 0, -4784075, 0, 0, -4784074, 0, 0, -4653221, 0, 0, -4653220, 0, 0, -4653127, 0, 0, -4653124, 0, 0, -4718567, 0, 0, -4718551, 0, 0, -4718539, 0, 0, -4718538, 0, 0, -4587685, 0, 0, -4587684, 0, 0, -4587591, 0, 0, -4587588, 0, 0, -4653003, 0, 0, -4653002, 0, 0, -4522149, 0, 0, -4522148, 0, 0, -4522055, 0, 0, -4522052, 0, 0, -4522047, 0, 0, -4522046, 0, 0, -4522045, 0, 0, -4587490, 0, 0, -4587484, 0, 0, -4587467, 0, 0, -4587466, 0, 0, -4456613, 0, 0, -4456612, 0, 0, -4456519, 0, 0, -4456516, 0, 0, -4456510, 0, 0, -4456509, 0, 0, -4521955, 0, 0, -4521954, 0, 0, -4521948, 0, 0, -4521947, 0, 0, -4521931, 0, 0, -4521930, 0, 0, -4391077, 0, 0, -4391076, 0, 0, -4390983, 0, 0, -4390981, 0, 0, -4390980, 0, 0, -4390973, 0, 0, -4456395, 0, 0, -4456394, 0, 0, -4325541, 0, 0, -4325540, 0, 0, -4390880, 0, 0, -4390879, 0, 0, -4390878, 0, 0, -4390859, 0, 0, -4390858, 0, 0, -4260005, 0, 0, -4260004, 0, 0, -4325343, 0, 0, -4325323, 0, 0, -4325322, 0, 0, -4194469, 0, 0, -4194468, 0, 0, -4259787, 0, 0, -4259786, 0, 0, -4128933, 0, 0, -4128932, 0, 0, -4194251, 0, 0, -4194250, 0, 0, -4063397, 0, 0, -4063396, 0, 0, -4128715, 0, 0, -4128714, 0, 0, -3997861, 0, 0, -3997860, 0, 0, -4063201, 0, 0, -4063200, 0, 0, -4063199, 0, 0, -4063198, 0, 0, -4063197, 0, 0, -4063179, 0, 0, -4063178, 0, 0, -3932325, 0, 0, -3932324, 0, 0, -3997664, 0, 0, -3997663, 0, 0, -3997662, 0, 0, -3997643, 0, 0, -3997642, 0, 0, -3866789, 0, 0, -3866788, 0, 0, -3932107, 0, 0, -3932106, 0, 0, -3801253, 0, 0, -3801252, 0, 0, -3866571, 0, 0, -3866570, 0, 0, -3735717, 0, 0, -3735716, 0, 0, -3801035, 0, 0, -3801034, 0, 0, -3670181, 0, 0, -3670180, 0, 0, -3735499, 0, 0, -3735498, 0, 0, -3604645, 0, 0, -3604644, 0, 0, -3669963, 0, 0, -3669962, 0, 0, -3539109, 0, 0, -3539108, 0, 0, -3604427, 0, 0, -3604426, 0, 0, -3473573, 0, 0, -3473572, 0, 0, -3538891, 0, 0, -3538890, 0, 0, -3408037, 0, 0, -3408036, 0, 0, -3473355, 0, 0, -3473354, 0, 0, -3342501, 0, 0, -3342500, 0, 0, -3407819, 0, 0, -3407818, 0, 0, -3276965, 0, 0, -3276964, 0, 0, -3342283, 0, 0, -3342282, 0, 0, -3211429, 0, 0, -3211428, 0, 0, -3276747, 0, 0, -3276746, 0, 0, -3145893, 0, 0, -3145892, 0, 0, -3211211, 0, 0, -3211210, 0, 0, -3080357, 0, 0, -3080356, 0, 0, -3145675, 0, 0, -3145674, 0, 0, -3014821, 0, 0, -3014820, 0, 0, -3080139, 0, 0, -3080138, 0, 0, -2949285, 0, 0, -2949284, 0, 0, -3014603, 0, 0, -3014602, 0, 0, -2883749, 0, 0, -2883748, 0, 0, -2949067, 0, 0, -2949066, 0, 0, -2818213, 0, 0, -2818212, 0, 0, -2818074, 0, 0, -2883531, 0, 0, -2883530, 0, 0, -2752677, 0, 0, -2752676, 0, 0, -2752538, 0, 0, -2817995, 0, 0, -2817994, 0, 0, -2687141, 0, 0, -2687140, 0, 0, -2687002, 0, 0, -2752459, 0, 0, -2752458, 0, 0, -2621605, 0, 0, -2621604, 0, 0, -2621466, 0, 0, -2686923, 0, 0, -2686922, 0, 0, -2556069, 0, 0, -2556068, 0, 0, -2621387, 0, 0, -2621386, 0, 0, -2490533, 0, 0, -2490532, 0, 0, -2555851, 0, 0, -2555850, 0, 0, -2424997, 0, 0, -2424996, 0, 0, -2490315, 0, 0, -2490314, 0, 0, -2359461, 0, 0, -2359460, 0, 0, -2424779, 0, 0, -2424778, 0, 0, -2293925, 0, 0, -2293924, 0, 0, -2359243, 0, 0, -2359242, 0, 0, -2228389, 0, 0, -2228388, 0, 0, -2293707, 0, 0, -2293706, 0, 0, -2162853, 0, 0, -2162852, 0, 0, -2228171, 0, 0, -2228170, 0, 0, -2097317, 0, 0, -2097316, 0, 0, -2162635, 0, 0, -2162634, 0, 0, -2031781, 0, 0, -2031780, 0, 0, -2097099, 0, 0, -2097098, 0, 0, -1966245, 0, 0, -1966244, 0, 0, -2031563, 0, 0, -2031562, 0, 0, -1900709, 0, 0, -1900708, 0, 0, -1966027, 0, 0, -1966026, 0, 0, -1835173, 0, 0, -1835172, 0, 0, -1900491, 0, 0, -1900490, 0, 0, -1769637, 0, 0, -1769636, 0, 0, -1834955, 0, 0, -1834954, 0, 0, -1704101, 0, 0, -1704100, 0, 0, -1769419, 0, 0, -1769418, 0, 0, -1638565, 0, 0, -1638564, 0, 0, -1703883, 0, 0, -1703882, 0, 0, -1573029, 0, 0, -1573028, 0, 0, -1638347, 0, 0, -1638346, 0, 0, -1507493, 0, 0, -1507492, 0, 0, -1572811, 0, 0, -1572810, 0, 0, -1441957, 0, 0, -1441956, 0, 0, -1507275, 0, 0, -1507274, 0, 0, -1376421, 0, 0, -1376420, 0, 0, -1441739, 0, 0, -1441738, 0, 0, -1310885, 0, 0, -1310884, 0, 0, -1376203, 0, 0, -1376202, 0, 0, -1245349, 0, 0, -1245348, 0, 0, -1310667, 0, 0, -1310666, 0, 0, -1179813, 0, 0, -1179812, 0, 0, -1245131, 0, 0, -1245130, 0, 0, -1114277, 0, 0, -1114276, 0, 0, -1179595, 0, 0, -1179594, 0, 0, -1048741, 0, 0, -1048740, 0, 0, -1114059, 0, 0, -1114058, 0, 0, -983205, 0, 0, -983204, 0, 0, -1048523, 0, 0, -1048522, 0, 0, -917669, 0, 0, -917668, 0, 0, -982987, 0, 0, -982986, 0, 0, -852133, 0, 0, -852132, 0, 0, -917451, 0, 0, -917450, 0, 0, -786597, 0, 0, -786596, 0, 0, -851915, 0, 0, -851914, 0, 0, -721061, 0, 0, -721060, 0, 0, -786379, 0, 0, -786378, 0, 0, -655525, 0, 0, -655524, 0, 0, -720843, 0, 0, -720842, 0, 0, -589989, 0, 0, -589988, 0, 0, -655307, 0, 0, -655306, 0, 0, -524453, 0, 0, -524452, 0, 0, -589771, 0, 0, -589770, 0, 0, -458917, 0, 0, -458916, 0, 0, -524235, 0, 0, -524234, 0, 0, -393381, 0, 0, -393380, 0, 0, -458699, 0, 0, -458698, 0, 0, -327845, 0, 0, -327844, 0, 0, -393163, 0, 0, -393162, 0, 0, -262309, 0, 0, -262308, 0, 0, -327627, 0, 0, -327626, 0, 0, -196773, 0, 0, -196772, 0, 0, -262091, 0, 0, -262090, 0, 0, -131237, 0, 0, -131236, 0, 0, -196555, 0, 0, -196554, 0, 0, -65701, 0, 0, -65700, 0, 0, -65681, 0, 0, -131019, 0, 0, -131018, 0, 0, -165, 0, 0, -164, 0, 0, -145, 0, 0, -144, 0, 0, -143, 0, 0, -65483, 0, 0, -65482, 0, 0, 65371, 0, 0, 65372, 0, 0, 65392, 0, 0, 65393, 0, 0, 65394, 0, 0, 53, 0, 0, 54, 0, 0, 130907, 0, 0, 130908, 0, 0, 130929, 0, 0, 130930, 0, 0, 130931, 0, 0, 65589, 0, 0, 65590, 0, 0, 196443, 0, 0, 196444, 0, 0, 196466, 0, 0, 196467, 0, 0, 196468, 0, 0, 131125, 0, 0, 131126, 0, 0, 261979, 0, 0, 261980, 0, 0, 262003, 0, 0, 262004, 0, 0, 196661, 0, 0, 196662, 0, 0, 327515, 0, 0, 327516, 0, 0, 327540, 0, 0, 327541, 0, 0, 262197, 0, 0, 262198, 0, 0, 393051, 0, 0, 393052, 0, 0, 393076, 0, 0, 393077, 0, 0, 327733, 0, 0, 327734, 0, 0, 458587, 0, 0, 458588, 0, 0, 458613, 0, 0, 458614, 0, 0, 393269, 0, 0, 393270, 0, 0, 524123, 0, 0, 524124, 0, 0, 524150, 0, 0, 524151, 0, 0, 458805, 0, 0, 458806, 0, 0, 589659, 0, 0, 589660, 0, 0, 589687, 0, 0, 589688, 0, 0, 524341, 0, 0, 524342, 0, 0, 655195, 0, 0, 655196, 0, 0, 655223, 0, 0, 655224, 0, 0, 589877, 0, 0, 589878, 0, 0, 720731, 0, 0, 720732, 0, 0, 720759, 0, 0, 720760, 0, 0, 655413, 0, 0, 655414, 0, 0, 786267, 0, 0, 786268, 0, 0, 786295, 0, 0, 786296, 0, 0, 720949, 0, 0, 720950, 0, 0, 851803, 0, 0, 851804, 0, 0, 851831, 0, 0, 851832, 0, 0, 786485, 0, 0, 786486, 0, 0, 917339, 0, 0, 917340, 0, 0, 917367, 0, 0, 917368, 0, 0, 852021, 0, 0, 852022, 0, 0, 982875, 0, 0, 982876, 0, 0, 982903, 0, 0, 982904, 0, 0, 917557, 0, 0, 917558, 0, 0, 1048411, 0, 0, 1048412, 0, 0, 1048439, 0, 0, 1048440, 0, 0, 983093, 0, 0, 983094, 0, 0, 1113947, 0, 0, 1113948, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1179483, 0, 0, 1179484, 0, 0, 1114165, 0, 0, 1114166, 0, 0, 1245019, 0, 0, 1245020, 0, 0, 1179701, 0, 0, 1179702, 0, 0, 1310555, 0, 0, 1310556, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1376091, 0, 0, 1376092, 0, 0, 1376093, 0, 0, 1376094, 0, 0, 1376095, 0, 0, 1376096, 0, 0, 1376097, 0, 0, 1376098, 0, 0, 1376099, 0, 0, 1376100, 0, 0, 1376101, 0, 0, 1376102, 0, 0, 1376103, 0, 0, 1376104, 0, 0, 1376105, 0, 0, 1376106, 0, 0, 1376107, 0, 0, 1376108, 0, 0, 1376109, 0, 0, 1376110, 0, 0, 1376111, 0, 0, 1376112, 0, 0, 1376113, 0, 0, 1376114, 0, 0, 1376115, 0, 0, 1376116, 0, 0, 1376117, 0, 0, 1376118, 0, 0, 1376119, 0, 0, 1376120, 0, 0, 1376121, 0, 0, 1376122, 0, 0, 1376123, 0, 0, 1376124, 0, 0, 1376125, 0, 0, 1376126, 0, 0, 1376127, 0, 0, 1376128, 0, 0, 1376129, 0, 0, 1376130, 0, 0, 1376131, 0, 0, 1376132, 0, 0, 1376133, 0, 0, 1376134, 0, 0, 1376135, 0, 0, 1376136, 0, 0, 1376137, 0, 0, 1376138, 0, 0, 1376139, 0, 0, 1376140, 0, 0, 1376141, 0, 0, 1376142, 0, 0, 1376143, 0, 0, 1376144, 0, 0, 1376145, 0, 0, 1376146, 0, 0, 1376147, 0, 0, 1376148, 0, 0, 1376149, 0, 0, 1376150, 0, 0, 1376151, 0, 0, 1376152, 0, 0, 1376153, 0, 0, 1376154, 0, 0, 1376155, 0, 0, 1376156, 0, 0, 1376157, 0, 0, 1376158, 0, 0, 1376159, 0, 0, 1376160, 0, 0, 1376161, 0, 0, 1376162, 0, 0, 1376163, 0, 0, 1376164, 0, 0, 1376165, 0, 0, 1376166, 0, 0, 1376167, 0, 0, 1376168, 0, 0, 1376169, 0, 0, 1376170, 0, 0, 1376171, 0, 0, 1376172, 0, 0, 1376173, 0, 0, 1376174, 0, 0, 1376175, 0, 0, 1376176, 0, 0, 1376177, 0, 0, 1376178, 0, 0, 1376179, 0, 0, 1376180, 0, 0, 1376181, 0, 0, 1376182, 0, 0, 1376183, 0, 0, 1376184, 0, 0, 1376185, 0, 0, 1376186, 0, 0, 1376187, 0, 0, 1376188, 0, 0, 1376189, 0, 0, 1376190, 0, 0, 1376191, 0, 0, 1376192, 0, 0, 1376193, 0, 0, 1376194, 0, 0, 1376195, 0, 0, 1376196, 0, 0, 1376197, 0, 0, 1376198, 0, 0, 1376199, 0, 0, 1376200, 0, 0, 1376201, 0, 0, 1376202, 0, 0, 1376203, 0, 0, 1376204, 0, 0, 1376205, 0, 0, 1376206, 0, 0, 1376207, 0, 0, 1376208, 0, 0, 1376209, 0, 0, 1376210, 0, 0, 1376211, 0, 0, 1376212, 0, 0, 1376213, 0, 0, 1376214, 0, 0, 1376215, 0, 0, 1376216, 0, 0, 1376217, 0, 0, 1376218, 0, 0, 1376219, 0, 0, 1376220, 0, 0, 1376221, 0, 0, 1376222, 0, 0, 1376223, 0, 0, 1376224, 0, 0, 1376225, 0, 0, 1376226, 0, 0, 1376227, 0, 0, 1376228, 0, 0, 1376229, 0, 0, 1376230, 0, 0, 1376231, 0, 0, 1376232, 0, 0, 1376233, 0, 0, 1376234, 0, 0, 1376235, 0, 0, 1376236, 0, 0, 1376237, 0, 0, 1376238, 0, 0, 1376239, 0, 0, 1376240, 0, 0, 1376241, 0, 0, 1376242, 0, 0, 1376243, 0, 0, 1376244, 0, 0, 1376245, 0, 0, 1376246, 0, 0, 1376247, 0, 0, 1376248, 0, 0, 1376249, 0, 0, 1376250, 0, 0, 1376251, 0, 0, 1376252, 0, 0, 1376253, 0, 0, 1376254, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1310761, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1310764, 0, 0, 1310765, 0, 0, 1310766, 0, 0, 1310767, 0, 0, 1310768, 0, 0, 1310769, 0, 0, 1310770, 0, 0, 1310771, 0, 0, 1310772, 0, 0, 1310773, 0, 0, 1310774, 0, 0, 1441627, 0, 0, 1441628, 0, 0, 1441629, 0, 0, 1441630, 0, 0, 1441631, 0, 0, 1441632, 0, 0, 1441633, 0, 0, 1441634, 0, 0, 1441635, 0, 0, 1441636, 0, 0, 1441637, 0, 0, 1441638, 0, 0, 1441639, 0, 0, 1441640, 0, 0, 1441641, 0, 0, 1441642, 0, 0, 1441643, 0, 0, 1441644, 0, 0, 1441645, 0, 0, 1441646, 0, 0, 1441647, 0, 0, 1441648, 0, 0, 1441649, 0, 0, 1441650, 0, 0, 1441651, 0, 0, 1441652, 0, 0, 1441653, 0, 0, 1441654, 0, 0, 1441655, 0, 0, 1441656, 0, 0, 1441657, 0, 0, 1441658, 0, 0, 1441659, 0, 0, 1441660, 0, 0, 1441661, 0, 0, 1441662, 0, 0, 1441663, 0, 0, 1441664, 0, 0, 1441665, 0, 0, 1441666, 0, 0, 1441667, 0, 0, 1441668, 0, 0, 1441669, 0, 0, 1441670, 0, 0, 1441671, 0, 0, 1441672, 0, 0, 1441673, 0, 0, 1441674, 0, 0, 1441675, 0, 0, 1441676, 0, 0, 1441677, 0, 0, 1441678, 0, 0, 1441679, 0, 0, 1441680, 0, 0, 1441681, 0, 0, 1441682, 0, 0, 1441683, 0, 0, 1441684, 0, 0, 1441685, 0, 0, 1441686, 0, 0, 1441687, 0, 0, 1441688, 0, 0, 1441689, 0, 0, 1441690, 0, 0, 1441691, 0, 0, 1441692, 0, 0, 1441693, 0, 0, 1441694, 0, 0, 1441695, 0, 0, 1441696, 0, 0, 1441697, 0, 0, 1441698, 0, 0, 1441699, 0, 0, 1441700, 0, 0, 1441701, 0, 0, 1441702, 0, 0, 1441703, 0, 0, 1441704, 0, 0, 1441705, 0, 0, 1441706, 0, 0, 1441707, 0, 0, 1441708, 0, 0, 1441709, 0, 0, 1441710, 0, 0, 1441711, 0, 0, 1441712, 0, 0, 1441713, 0, 0, 1441714, 0, 0, 1441715, 0, 0, 1441716, 0, 0, 1441717, 0, 0, 1441718, 0, 0, 1441719, 0, 0, 1441720, 0, 0, 1441721, 0, 0, 1441722, 0, 0, 1441723, 0, 0, 1441724, 0, 0, 1441725, 0, 0, 1441726, 0, 0, 1441727, 0, 0, 1441728, 0, 0, 1441729, 0, 0, 1441730, 0, 0, 1441731, 0, 0, 1441732, 0, 0, 1441733, 0, 0, 1441734, 0, 0, 1441735, 0, 0, 1441736, 0, 0, 1441737, 0, 0, 1441738, 0, 0, 1441739, 0, 0, 1441740, 0, 0, 1441741, 0, 0, 1441742, 0, 0, 1441743, 0, 0, 1441744, 0, 0, 1441745, 0, 0, 1441746, 0, 0, 1441747, 0, 0, 1441748, 0, 0, 1441749, 0, 0, 1441750, 0, 0, 1441751, 0, 0, 1441752, 0, 0, 1441753, 0, 0, 1441754, 0, 0, 1441755, 0, 0, 1441756, 0, 0, 1441757, 0, 0, 1441758, 0, 0, 1441759, 0, 0, 1441760, 0, 0, 1441761, 0, 0, 1441762, 0, 0, 1441763, 0, 0, 1441764, 0, 0, 1441765, 0, 0, 1441766, 0, 0, 1441767, 0, 0, 1441768, 0, 0, 1441769, 0, 0, 1441770, 0, 0, 1441771, 0, 0, 1441772, 0, 0, 1441773, 0, 0, 1441774, 0, 0, 1441775, 0, 0, 1441776, 0, 0, 1441777, 0, 0, 1441778, 0, 0, 1441779, 0, 0, 1441780, 0, 0, 1441781, 0, 0, 1441782, 0, 0, 1441783, 0, 0, 1441784, 0, 0, 1441785, 0, 0, 1441786, 0, 0, 1441787, 0, 0, 1441788, 0, 0, 1441789, 0, 0, 1441790, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1376296, 0, 0, 1376297, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376302, 0, 0, 1376303, 0, 0, 1376304, 0, 0, 1376305, 0, 0, 1376306, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1376309, 0, 0, 1376310, 0, 0 )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="player_birb" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 672, 80 )
scale = Vector2( 1, 1.08333 )

[node name="enemies" type="Node" parent="." index="4"]

[node name="enemy_thing_red1" parent="enemies" index="0" instance=ExtResource( 6 )]

position = Vector2( -512, -864 )
is_disabled = true

[node name="enemy_thing_red2" parent="enemies" index="1" instance=ExtResource( 7 )]

position = Vector2( -4032, -672 )
is_disabled = true

[node name="enemy_thing_queen" parent="enemies" index="2" instance=ExtResource( 8 )]

position = Vector2( -1952, -1168 )
is_disabled = true

[node name="enemy_thing_queen2" parent="enemies" index="3" instance=ExtResource( 8 )]

position = Vector2( -64, -1632 )
is_disabled = true

[node name="enemy_thing_queen3" parent="enemies" index="4" instance=ExtResource( 8 )]

position = Vector2( -3504, -1824 )
is_disabled = true

[node name="bullets" type="Node" parent="." index="5"]

[node name="end_game" type="CanvasLayer" parent="." index="6"]

pause_mode = 2
editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="main_node" type="Node2D" parent="end_game" index="0"]

visible = false

[node name="you_won_sprite" type="Sprite" parent="end_game/main_node" index="0"]

visible = false
position = Vector2( 528, 256 )
scale = Vector2( 0.772435, 0.879371 )
texture = ExtResource( 9 )

[node name="you_lost_sprite" type="Sprite" parent="end_game/main_node" index="1"]

position = Vector2( 528, 256 )
scale = Vector2( 0.772435, 0.879371 )
texture = ExtResource( 10 )

[node name="play_again_button" type="Button" parent="end_game/main_node" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 384.0
margin_right = 640.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "PLAY AGAIN?"
flat = false
align = 1

[node name="end_button" type="Button" parent="end_game/main_node" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 448.0
margin_right = 640.0
margin_bottom = 496.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "EXIT"
flat = false
align = 1

[node name="death_walls" type="Area2D" parent="." index="7" groups=[
"walls",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="coll1" type="CollisionPolygon2D" parent="death_walls" index="0"]

build_mode = 0
polygon = PoolVector2Array( 1760, -2848, 1760, 704, -5280, 704, -5280, 1008, 2224, 992, 2224, -2848 )

[node name="coll2" type="CollisionPolygon2D" parent="death_walls" index="1"]

position = Vector2( -3530.55, -2180.08 )
rotation = 3.13951
build_mode = 0
polygon = PoolVector2Array( 1756.07, -3184.44, 1748.06, 671.556, -5723.92, 656.031, -5724.75, 1056.03, 2147.33, 1024.39, 2252.07, -3183.41 )


